tests/miniJava/pos/000912_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( 0 . length ) System.out.println ( { } ) ; else { } } }
