tests/miniJava/neg/003830_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( void 0 ) { } else { } } }
